# insta360-link-android-control-app

./: .gitignore  .gitmodules  AGENTS.md  ANDROID_INSTA360_GIMBAL_NOTE.md  README.md  pubspec.yaml  temp_usb.txt
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/models/: README.md
android/app/src/main/cpp/: CMakeLists.txt  native_tracker.cpp
android/app/src/main/kotlin/com/example/insta360link_android_test/: MainActivity.kt  YoloV8FaceTracker.kt
docs/: android_insta360link_gimbal.md  edgeface_tflite.md  yolo_v8_face.md
lib/: main.dart
lib/src/: insta360link_tracker.dart  insta_link_tracker.dart  tracking_page.dart
lib/src/data/: app_settings.dart  app_settings.g.dart  face_person.dart  face_person.g.dart  isar_service.dart
scripts/: adb_camctl.ps1
test/: widget_test.dart
